SFOS-1669 set classpath as environment variable, not as a command line paramater when creating a child process